--- a/virtual_keyboard.css
+++ b/virtual_keyboard.css
@@ -15,6 +15,7 @@
     margin: 1%;
     text-align: center;
     padding-top: 1%;
+    cursor: pointer; /* סמן כף יד */
 }
 .big_keys{
     text-align: center;
