--- a/virtual_keyboard.css
+++ b/virtual_keyboard.css
@@ -34,5 +34,7 @@ button{
     transition: background-color 0.3s; /* אנימציה על שינוי צבע */
 
 }
-.pointer {cursor: pointer;}
+.pointer {
+    cursor: pointer;
+}
 
